--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -5,6 +5,7 @@
   "source": "src/index.ts",
   "exports": {
     ".": {
+      "sui": "./src/index.ts",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs"
@@ -13,6 +14,7 @@
       "default": "./src/index.ts"
     },
     "./yup": {
+      "sui": "./yup/src/index.ts",
       "require": "./dist/yup/index.js",
       "types": "./dist/yup/index.d.ts",
       "import": "./dist/yup/index.mjs"
@@ -21,6 +23,7 @@
       "default": "./yup/src/index.ts"
     },
     "./zod": {
+      "sui": "./zod/src/index.ts",
       "require": "./dist/zod/index.js",
       "types": "./dist/zod/index.d.ts",
       "import": "./dist/zod/index.mjs"
@@ -29,6 +32,7 @@
       "default": "./zod/src/index.ts"
     },
     "./ajv": {
+      "sui": "./ajv/src/index.ts",
       "require": "./dist/ajv/index.js",
       "types": "./dist/ajv/index.d.ts",
       "import": "./dist/ajv/index.mjs"
