--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -60,7 +60,7 @@
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-frame-component": "^5.2.7",
-    "react-icons": "^5.3.0",
+    "react-icons": "5.5.0",
     "react-intersection-observer": "^9.13.1",
     "react-live-runner": "^1.0.7",
     "react-markdown": "^8.0.7",
