--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "5.5.0",
     "react-is": "^18.3.1",
     "react-test-renderer": "^18.3.1",
     "rehype-slug": "^6.0.0",
