fix: heading sizes

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,7 +11,8 @@ packages:
 onlyBuiltDependencies:
   - '@parcel/watcher'
 overrides:
-  '@ark-ui/react': '5.12.0'
-  '@chakra-ui/react': '3.20.0'
+  '@zag-js/core': '1.17.4'
+  '@ark-ui/react': '5.15.4'
+  '@chakra-ui/react': '3.21.0'
   'react': '19.0.0'
   '@types/react': '19.0.12'
