--- a/packages/saas-ui-charts/package.json
+++ b/packages/saas-ui-charts/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@chakra-ui/styled-system": "^2.12.1",
-    "recharts": "^2.13.0"
+    "recharts": "2.15.4"
   },
   "peerDependencies": {
     "@chakra-ui/react": "2.10.9",
