--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,9 +14,12 @@ onlyBuiltDependencies:
 overrides:
   '@ark-ui/react': '5.20.0'
   '@chakra-ui/react': '3.25.0'
-  'react': '19.0.0'
-  '@types/react': '19.0.12'
-hoistPattern:
-  - '@chakra-ui/react'
-  - '@ark-ui/react'
-  - 'zod'
+  'react': '19.1.1'
+  'react-dom': '19.1.1'
+  '@types/react': '19.1.10'
+  '@types/react-dom': '19.1.7'
+  'typescript': '5.8.3'
+# hoistPattern:
+#   - '@chakra-ui/react'
+#   - '@ark-ui/react'
+#   - 'zod'
