--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/node": "^22.15.30",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
+    "@octokit/rest": "^22.0.0",
     "browserslist": "^4.25.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.28.0",
