--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,18 +15,16 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - name: Install dependencies
-        run: yarn
-        env:
-          YARN_ENABLE_IMMUTABLE_INSTALLS: false
+        run: pnpm i
 
       - name: Build packages
-        run: yarn build:packages
+        run: pnpm build:packages
 
       - name: Build tokens
-        run: yarn build:tokens
+        run: pnpm build:tokens
 
       - name: Run tests
-        run: yarn test:ci
+        run: pnpm test:ci
