--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "build:storybook-addon": "pnpm --filter @saas-ui/storybook-addon build",
     "build:props-docs": "pnpm typedocs && pnpm --filter @saas-ui/props-docs build",
     "typedocs": "tsx scripts/typedocs.ts",
-    "preinstall": "rm -rf node_modules/odiff-bin"
+    "preinstall": "rm -rf node_modules/odiff-bin",
+    "release": "pnpm run changeset:version && pnpm run build:packages && pnpm run publish:next"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.20.0",
