chore: update pkg-pr

--- a/.github/workflows/pkg-pr.yml
+++ b/.github/workflows/pkg-pr.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Build
         run: pnpm build:packages
 
-      - run: pnpm dlx pkg-pr-new publish './packages/saas-ui-auth'
+      - run: pnpm dlx pkg-pr-new publish './packages/saas-ui-*'
