feat: upgrade packages

--- a/package.json
+++ b/package.json
@@ -64,34 +64,34 @@
     "release": "pnpm run changeset:version && pnpm run build:packages && pnpm run publish:next"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^3.20.0",
-    "@changesets/cli": "^2.29.4",
-    "@manypkg/get-packages": "^2.2.2",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^22.15.30",
-    "@typescript-eslint/eslint-plugin": "^8.33.1",
-    "@typescript-eslint/parser": "^8.33.1",
+    "@chakra-ui/cli": "^3.27.0",
+    "@changesets/cli": "^2.29.7",
+    "@manypkg/get-packages": "^3.1.0",
     "@octokit/rest": "^22.0.0",
-    "browserslist": "^4.25.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.28.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/node": "^22.18.8",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "browserslist": "^4.26.3",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-import-resolver-typescript": "^4.4.3",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-storybook": "^0.11.6",
-    "framer-motion": "^11.18.2",
+    "eslint-plugin-storybook": "^9.1.10",
+    "framer-motion": "^12.23.22",
     "husky": "^9.1.7",
     "hygen": "^6.2.11",
-    "jsdom": "^26.0.0",
-    "lint-staged": "^15.5.0",
-    "next": "^15.3.3",
+    "jsdom": "^27.0.0",
+    "lint-staged": "^16.2.3",
+    "next": "^15.5.4",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
-    "tsx": "^4.19.3",
-    "turbo": "2.4.4",
-    "typescript": "^5.8.2",
+    "tsx": "^4.20.6",
+    "turbo": "2.5.8",
+    "typescript": "5.9.3",
     "vercel-submodules": "^1.0.10",
     "vitest": "^3.2.2"
   },
