--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -81,28 +81,28 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
+    "@hookform/resolvers": "^5.2.2",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/react": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
-    "react-hook-form": "^7.55.0",
-    "zod": "^3.25.76"
+    "react-hook-form": "^7.63.0",
+    "zod": "^4.1.11"
   },
   "peerDependencies": {
-    "@chakra-ui/react": "^3.20.0",
+    "@chakra-ui/react": "3.27.0",
     "@emotion/react": ">=11.0.0",
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0"
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
-    "tsd": "^0.31.2",
-    "tsup": "^8.4.0",
-    "zod": "^3.25.76",
-    "typescript": "^5.8.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4"
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "tsd": "^0.33.0",
+    "tsup": "^8.5.0",
+    "typescript": "5.9.3",
+    "zod": "^3.25.76"
   },
   "tsd": {
     "directory": "tests"
