--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -12,40 +12,40 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
-    "@chakra-ui/react": "^3.20.0",
+    "@chakra-ui/react": "3.27.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource-variable/inter": "^5.2.5",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/storybook-addon": "workspace:*",
-    "@storybook/addon-a11y": "^8.6.9",
+    "@storybook/addon-a11y": "^9.1.10",
     "@storybook/addon-storysource": "^8.6.9",
-    "@storybook/addon-themes": "^8.6.9",
-    "@storybook/addon-toolbars": "^8.6.9",
-    "@storybook/addon-viewport": "^8.6.9",
-    "@storybook/cli": "^8.6.9",
+    "@storybook/addon-themes": "^9.1.10",
+    "@storybook/addon-toolbars": "^9.0.8",
+    "@storybook/addon-viewport": "^9.0.8",
+    "@storybook/cli": "^9.1.10",
     "@storybook/client-logger": "^8.6.9",
     "@storybook/manager-api": "^8.6.9",
     "@storybook/preview-api": "^8.6.9",
-    "@storybook/react": "^8.6.9",
-    "@storybook/react-vite": "^8.6.9",
+    "@storybook/react": "^9.1.10",
+    "@storybook/react-vite": "^9.1.10",
     "@storybook/types": "^8.6.9",
     "@swc/core": "^1.11.13",
-    "@vitejs/plugin-react": "^4.3.4",
-    "framer-motion": "^11.18.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.3",
+    "@vitejs/plugin-react": "^5.0.4",
+    "framer-motion": "^12.23.22",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "typescript": "5.9.3",
+    "vite": "^7.1.8",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
-    "storybook": "8.6.9",
-    "typescript": "^5.8.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4"
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "storybook": "9.1.10",
+    "typescript": "5.8.3"
   }
 }
