--- a/apps/compositions/package.json
+++ b/apps/compositions/package.json
@@ -15,28 +15,28 @@
   "author": "Segun Adebayo <sage@adebayosegun.com>",
   "license": "ISC",
   "dependencies": {
-    "@chakra-ui/react": "^3.25.0",
+    "@chakra-ui/react": "3.27.0",
     "@saas-ui/assets": "workspace:*",
     "@saas-ui/forms": "workspace:*",
     "@saas-ui/react": "workspace:*",
-    "@tanstack/react-table": "8.21.2",
+    "@tanstack/react-table": "8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
     "next-themes": "0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-frame-component": "5.2.7",
-    "react-hook-form": "7.54.2",
+    "react-hook-form": "7.63.0",
     "react-icons": "5.5.0",
     "react-lorem-ipsum": "1.4.10",
     "react-markdown": "10.1.0",
     "react-use": "17.6.0",
-    "recharts": "2.15.1",
-    "use-mask-input": "3.4.2",
-    "zod": "3.25.76"
+    "recharts": "3.2.1",
+    "use-mask-input": "3.5.2",
+    "zod": "4.1.11"
   },
   "devDependencies": {
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "@hookform/resolvers": "4.1.3"
+    "@hookform/resolvers": "5.2.2",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0"
   }
 }
