--- a/examples/next-pages/package.json
+++ b/examples/next-pages/package.json
@@ -9,18 +9,18 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "3.20.0",
+    "@chakra-ui/react": "3.27.0",
     "@emotion/react": "11",
+    "@saas-ui/react": "3.0.0-next.39",
     "@types/node": "^24.0.4",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "next": "^15.3.4",
     "next-themes": "^0.4.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-icons": "5.5.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "typescript": "^5.8.3",
-    "@saas-ui/react": "3.0.0-next.39"
+    "typescript": "5.9.3"
   },
   "repository": {
     "type": "git",
