--- a/examples/react-router/package.json
+++ b/examples/react-router/package.json
@@ -10,27 +10,27 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "3.25.0",
+    "@chakra-ui/react": "3.27.0",
     "@emotion/react": "11",
     "@react-router/node": "^7.6.2",
     "@react-router/serve": "^7.6.2",
     "@saas-ui/react": "3.0.0-next.39",
     "isbot": "^5.1.28",
     "next-themes": "^0.4.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^3.25.0",
+    "@chakra-ui/cli": "^3.27.0",
     "@react-router/dev": "^7.6.2",
     "@types/node": "^24",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "react-router-devtools": "^5.0.6",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.0",
+    "typescript": "5.9.3",
+    "vite": "^7.1.8",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
