--- a/examples/remix-ts/package.json
+++ b/examples/remix-ts/package.json
@@ -12,24 +12,24 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "workspace:*",
+    "@chakra-ui/react": "3.27.0",
     "@emotion/cache": "11",
     "@emotion/react": "11",
     "@emotion/server": "11",
     "@remix-run/node": "^2.16.8",
     "@remix-run/react": "^2.16.8",
     "@remix-run/serve": "^2.16.8",
-    "isbot": "^5.1.28",
-    "react-icons": "5.5.0",
     "@saas-ui/react": "3.0.0-next.39",
+    "isbot": "^5.1.28",
     "next-themes": "^0.4.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-icons": "5.5.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.8",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "autoprefixer": "^10.4.21",
@@ -38,10 +38,10 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^6.1.0",
     "postcss": "^8.5.6",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.0",
+    "typescript": "5.9.3",
+    "vite": "^7.1.8",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "engines": {
