--- a/examples/tanstack/package.json
+++ b/examples/tanstack/package.json
@@ -9,28 +9,28 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
-    "@chakra-ui/react": "3.25.0",
+    "@chakra-ui/react": "3.27.0",
     "@emotion/react": "^11.14.0",
     "@saas-ui/react": "next",
     "@tanstack/react-router": "^1.125.6",
     "@tanstack/react-router-devtools": "^1.125.6",
     "@tanstack/react-start": "^1.125.6",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^2.6.0",
-    "zod": "3.25.76"
+    "tailwind-merge": "^3.3.1",
+    "zod": "4.1.11"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "vite": "^6.3.5",
+    "tailwindcss": "^4.1.14",
+    "typescript": "5.9.3",
+    "vite": "^7.1.8",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
