--- a/examples/tsrouter/package.json
+++ b/examples/tsrouter/package.json
@@ -13,30 +13,30 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
-    "@chakra-ui/react": "3.25.0",
+    "@chakra-ui/react": "3.27.0",
     "@emotion/react": "^11.14.0",
     "@saas-ui/react": "3.0.0-next.39",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "^1.121.2",
     "@tanstack/react-router-devtools": "^1.121.2",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
-    "@tanstack/eslint-config": "^0.1.0",
+    "@tanstack/eslint-config": "^0.3.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^26.0.0",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "@vitejs/plugin-react": "^5.0.4",
+    "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.7.2",
-    "vite": "^6.1.0",
+    "typescript": "5.9.3",
+    "vite": "^7.1.8",
     "vitest": "^3.0.5",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^5.1.0"
   }
 }
