--- a/packages/saas-ui-auth0/package.json
+++ b/packages/saas-ui-auth0/package.json
@@ -55,15 +55,15 @@
   },
   "peerDependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0"
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
-    "@auth0/auth0-spa-js": "2.1.3",
-    "typescript": "^5.8.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4"
+    "@auth0/auth0-spa-js": "2.5.0",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "typescript": "5.9.3"
   }
 }
