--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -87,24 +87,24 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@ark-ui/react": "^5.20.0",
+    "@ark-ui/react": "5.25.1",
     "@react-aria/utils": "^3.28.1",
     "@saas-ui/hooks": "workspace:*",
     "@zag-js/dom-event": "^0.80.0",
     "@zag-js/dom-utils": "^0.2.4"
   },
   "peerDependencies": {
-    "react": ">=18",
-    "react-dom": ">=18"
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.1",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "jotai": "^2.12.2",
-    "tsup": "^8.4.0",
-    "typescript": "^5.8.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4"
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "tsup": "^8.5.0",
+    "typescript": "5.9.3"
   }
 }
