--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -71,25 +71,25 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@ark-ui/react": "^5.20.0",
+    "@ark-ui/react": "5.25.1",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/hooks": "workspace:*",
     "next-themes": "^0.4.6"
   },
   "peerDependencies": {
-    "@chakra-ui/react": "^3.25.0",
+    "@chakra-ui/react": "3.27.0",
     "@emotion/react": "^11",
-    "react": ">=18",
-    "react-dom": ">=18"
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "rimraf": "^6.0.1",
-    "tsup": "^8.4.0",
-    "typescript": "^5.8.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4"
+    "tsup": "^8.5.0",
+    "typescript": "5.9.3"
   }
 }
