--- a/packages/saas-ui-supabase/package.json
+++ b/packages/saas-ui-supabase/package.json
@@ -58,15 +58,15 @@
   },
   "peerDependencies": {
     "@supabase/supabase-js": "^2.45.4",
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0"
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
     "@supabase/supabase-js": "^2.49.2",
-    "typescript": "^5.8.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4"
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "typescript": "5.9.3"
   }
 }
