--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -20,20 +20,13 @@
     "@saas-ui/react": "workspace:*",
     "@saas-ui/storybook-addon": "workspace:*",
     "@storybook/addon-a11y": "^9.1.10",
-    "@storybook/addon-storysource": "^8.6.9",
     "@storybook/addon-themes": "^9.1.10",
-    "@storybook/addon-toolbars": "^9.0.8",
-    "@storybook/addon-viewport": "^9.0.8",
     "@storybook/cli": "^9.1.10",
-    "@storybook/client-logger": "^8.6.9",
-    "@storybook/manager-api": "^8.6.9",
-    "@storybook/preview-api": "^8.6.9",
-    "@storybook/react": "^9.1.10",
     "@storybook/react-vite": "^9.1.10",
-    "@storybook/types": "^8.6.9",
     "@swc/core": "^1.11.13",
     "@vitejs/plugin-react": "^5.0.4",
     "framer-motion": "^12.23.22",
+    "react-icons": "^5.5.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "typescript": "5.9.3",
@@ -46,6 +39,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "storybook": "9.1.10",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "@storybook/addon-docs": "9.1.10"
   }
 }
