--- a/packages/saas-ui-modals/package.json
+++ b/packages/saas-ui-modals/package.json
@@ -67,12 +67,13 @@
     "react-dom": "19.1.1"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.52.15",
     "@types/react": "19.2.0",
     "@types/react-dom": "19.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "typescript": "5.9.3",
-    "yup": "^1.6.1",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "tsup": "^8.5.0"
   }
 }
