--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -71,16 +71,16 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@ark-ui/react": "5.25.1",
+    "@ark-ui/react": "^5.25.1",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/hooks": "workspace:*",
     "next-themes": "^0.4.6"
   },
   "peerDependencies": {
-    "@chakra-ui/react": "3.27.0",
+    "@chakra-ui/react": "^3.27.0",
     "@emotion/react": "^11",
-    "react": "19.1.1",
-    "react-dom": "19.1.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/react": "19.2.0",
