--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -60,13 +60,13 @@
     "@chakra-ui/styled-system": "^2.12.1",
     "@chakra-ui/theme-tools": "^2.2.7",
     "@chakra-ui/utils": "^2.2.3",
-    "@internationalized/date": "3.8.2",
-    "@react-aria/calendar": "3.8.3",
-    "@react-aria/datepicker": "3.14.5",
-    "@react-aria/i18n": "3.12.3",
-    "@react-aria/interactions": "3.25.3",
-    "@react-stately/calendar": "3.8.2",
-    "@react-stately/datepicker": "3.14.2",
+    "@internationalized/date": "3.9.0",
+    "@react-aria/calendar": "3.9.1",
+    "@react-aria/datepicker": "3.15.1",
+    "@react-aria/i18n": "3.12.12",
+    "@react-aria/interactions": "3.25.5",
+    "@react-stately/calendar": "3.8.4",
+    "@react-stately/datepicker": "3.15.1",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/modals": "workspace:*"
   },
@@ -79,9 +79,9 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@react-types/button": "3.12.2",
-    "@react-types/datepicker": "^3.12.2",
-    "@react-types/shared": "^3.30.0",
+    "@react-types/button": "3.14.0",
+    "@react-types/datepicker": "3.13.1",
+    "@react-types/shared": "3.32.0",
     "@saas-ui/forms": "workspace:*",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2",
