--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -27,15 +27,7 @@
       "compositions/*": ["../compositions/src/*"],
       "@saas-ui/react": ["../../packages/saas-ui-react/src/index.ts"],
       "@saas-ui/react/*": ["../../packages/saas-ui-react/src/components/*"],
-      "zod/v4": ["./node_modules/zod/dist/types/v4/index.d.ts"],
-      "zod/v4/core": ["./node_modules/zod/dist/types/v4/core/index.d.ts"]
-      // "@saas-ui/forms": ["../../packages/saas-ui-forms/src/index.ts"],
-      // "@saas-ui/charts": ["../../packages/saas-ui-charts/src/index.ts"],
-      // "@saas-ui/core": ["../../packages/saas-ui-core/src/index.ts"],
-      // "@saas-ui/core/utils": ["../../packages/saas-ui-core/src/utils/index.ts"],
-      // "@saas-ui/core/*": ["../../packages/saas-ui-core/src/components/*"],
-      // "@saas-ui/assets": ["../../packages/saas-ui-assets/src/index.ts"],
-      // "@saas-ui/hooks": ["../../packages/saas-ui-hooks/src/index.ts"]
+      "saas-ui-blocks": ["../../packages/pro/packages/blocks/index.ts"]
     },
     "target": "ES2017"
   },
