--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@ark-ui/react": "5.25.1",
     "@chakra-ui/charts": "^3.27.0",
-    "@chakra-ui/react": "3.27.0",
+    "@chakra-ui/react": "^3.27.0",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "11",
     "@emotion/weak-memoize": "^0.4.0",
     "@fumadocs/content-collections": "^1.2.0",
     "@octokit/rest": "^22.0.0",
+    "@polar-sh/nextjs": "^0.4.9",
     "@radix-ui/react-navigation-menu": "^1.2.9",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
@@ -52,12 +53,12 @@
     "rehype-slug": "6.0.0",
     "remark-directive": "4.0.0",
     "remark-gfm": "4.0.1",
+    "saas-ui-blocks": "workspace:*",
     "scule": "1.3.0",
     "shiki": "3.13.0",
     "three": "^0.180.0",
     "unist-util-visit": "5.0.0",
     "use-mask-input": "^3.5.2",
-    "saas-ui-blocks": "workspace:*",
     "zod": "^4.1.11"
   },
   "devDependencies": {
