--- a/examples/next-pages/package.json
+++ b/examples/next-pages/package.json
@@ -9,7 +9,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "3.27.0",
+    "@chakra-ui/react": "^3.27.0",
     "@emotion/react": "11",
     "@saas-ui/react": "3.0.0-next.39",
     "@types/node": "^24.0.4",
