--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -64,7 +64,7 @@
   },
   "homepage": "https://github.com/saas-ui/saas-ui#readme",
   "devDependencies": {
-    "@chakra-ui/react": "3.27.0",
+    "@chakra-ui/react": "^3.27.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@saas-ui/react": "workspace:*",
@@ -79,7 +79,7 @@
     "@storybook/preview-api": "^8.6.9"
   },
   "peerDependencies": {
-    "@chakra-ui/react": "3.27.0",
+    "@chakra-ui/react": "^3.27.0",
     "@saas-ui/react": "^3.0.0-next.44",
     "@storybook/components": ">=8.0.0",
     "@storybook/manager-api": ">=8.0.0",
