--- a/.github/workflows/release-v3.yml
+++ b/.github/workflows/release-v3.yml
@@ -24,7 +24,7 @@ jobs:
         uses: pnpm/action-setup@v4
 
       - name: Install Dependencies
-        run: pnpm i
+        run: pnpm i --ignore-scripts
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
