--- a/packages/saas-ui-cli/package.json
+++ b/packages/saas-ui-cli/package.json
@@ -42,6 +42,7 @@
     "@stricli/auto-complete": "^1.1.1",
     "@stricli/core": "^1.1.1",
     "@supabase/supabase-js": "^2.49.1",
+    "@saas-js/iconify": "^0.0.3",
     "chalk": "^5.4.1",
     "cli-table3": "^0.6.3",
     "cosmiconfig": "^9.0.0",
