--- a/.github/workflows/release-v3.yml
+++ b/.github/workflows/release-v3.yml
@@ -34,3 +34,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          SUPABASE_URL: ${{ vars.SUPABASE_URL }}
+          SUPABASE_ANON_KEY: ${{ vars.SUPABASE_ANON_KEY }}
+          AUTH_ORIGIN: ${{ vars.AUTH_ORIGIN }}
+          REGISTRY_URL: ${{ vars.REGISTRY_URL }}
+          SCHEMA_URL: ${{ vars.SCHEMA_URL }}
