--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "browserslist": "^4.24.0",
     "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
+    "next": "14.2.33",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.3",
