--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "changelog:commit": "git add CHANGELOG.md && git commit -am 'docs: add changelog' && git push",
     "changeset:next": "pnpm changeset pre enter next",
     "changeset:version": "changeset version",
-    "publish:next": "pnpm --filter '@saas-ui/*' --filter '!@saas-ui-pro/*' --filter '!@saas-ui/cli' publish --access public --tag next --publish-branch v3 --no-git-checks",
-    "publish": "pnpm --filter '@saas-ui/*' --filter '!@saas-ui-pro/*' --filter '!@saas-ui/cli' publish && pnpm changeset tag --no-git-checks",
+    "publish:next": "pnpm --filter '@saas-ui/*' --filter '!@saas-ui-pro/*' --filter '!@saas-ui/cli' publish --access public --tag next --publish-branch v3 --no-git-checks && pnpm changeset tag --no-git-checks",
+    "publish": "pnpm --filter '@saas-ui/*' --filter '!@saas-ui-pro/*' --filter '!@saas-ui/cli' publish --no-git-checks && pnpm changeset tag --no-git-checks",
     "storybook": "pnpm --filter saas-ui-storybook dev",
     "build:storybook": "pnpm --filter saas-ui-storybook build",
     "prepare": "husky install",
