feat: add support for cli namespaces

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "build:storybook-addon": "pnpm --filter @saas-ui/storybook-addon build",
     "build:props-docs": "pnpm typedocs && pnpm --filter @saas-ui/props-docs build",
     "typedocs": "tsx scripts/typedocs.ts",
-    "preinstall": "rm -rf node_modules/odiff-bin",
+    "preinstall": "rimraf node_modules/odiff-bin",
     "release": "pnpm run changeset:version && pnpm run build:packages && pnpm run publish:next"
   },
   "devDependencies": {
