--- a/packages/saas-ui-cli/package.json
+++ b/packages/saas-ui-cli/package.json
@@ -27,11 +27,11 @@
   },
   "scripts": {
     "prebuild": "tsc -p tsconfig.json",
-    "build": "dotenvx run -f .env.production -- tsup",
-    "build:dev": "dotenvx run -f .env.local -- tsup --watch",
+    "build": "dotenvx run -f .env -- tsup",
+    "dev": "dotenvx run -f .env -- tsup --watch",
     "prepublishOnly": "npm run build",
     "postinstall": "sui install",
-    "dev": "dotenvx run -f .env.local -- tsx --tsconfig tsconfig.json bin/cli.ts"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@antfu/ni": "^25.0.0",
@@ -42,7 +42,6 @@
     "@stricli/auto-complete": "^1.1.1",
     "@stricli/core": "^1.1.1",
     "@supabase/supabase-js": "^2.49.1",
-    "@saas-js/iconify": "^0.0.3",
     "chalk": "^5.4.1",
     "cli-table3": "^0.6.3",
     "cosmiconfig": "^9.0.0",
