chore: add a default `@saas-ui` registry to config file in cli

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
   - apps/website
   - apps/compositions
+  - apps/my-app
   - packages/storybook
   - packages/pro/packages/*
   - packages/saas-ui-*
